fix line spacing

--- a/app/assets/stylesheets/cfa_ui_components/base/typography.css
+++ b/app/assets/stylesheets/cfa_ui_components/base/typography.css
@@ -6,6 +6,7 @@ body {
     font-size: 16px;
     font-weight: 400;
 
+    line-height: normal;
     @apply antialiased;
 }
 
